--- a/build.gradle
+++ b/build.gradle
@@ -9,26 +9,30 @@ repositories {
 }
 
 dependencies {
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-mutiny'
-    implementation 'io.quarkus:quarkus-minikube'
-    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-mqtt'
-    implementation 'io.quarkus:quarkus-flyway'
+//    implementation 'io.quarkus:quarkus-minikube'
+//    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-mqtt'
+//    implementation 'io.quarkus:quarkus-flyway'
     implementation 'io.quarkus:quarkus-mongodb-panache'
     implementation 'io.quarkus:quarkus-config-yaml'
     implementation 'io.quarkus:quarkus-smallrye-jwt'
     implementation 'io.quarkus:quarkus-smallrye-health'
     implementation 'io.quarkus:quarkus-smallrye-graphql'
-    implementation 'io.quarkus:quarkus-kubernetes'
+//    implementation 'io.quarkus:quarkus-kubernetes'
     implementation 'io.quarkus:quarkus-grpc'
-    implementation 'io.quarkus:quarkus-liquibase-mongodb'
-    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
-    implementation 'io.quarkus:quarkus-oidc'
-    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
-    implementation 'io.quarkus:quarkus-agroal'
+//    implementation 'io.quarkus:quarkus-liquibase-mongodb'
+//    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
+//    implementation 'io.quarkus:quarkus-oidc'
+//    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
+//    implementation 'io.quarkus:quarkus-agroal'
     implementation 'io.quarkus:quarkus-cache'
     implementation 'io.quarkus:quarkus-arc'
     testImplementation 'io.quarkus:quarkus-junit5'
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 }
 
 group 'lords.land'
