--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ quarkusPluginVersion=2.3.0.Final
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=2.3.0.Final
+
+lombokVersion=1.18.22
