--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,4 @@ pluginManagement {
         id "${quarkusPluginId}" version "${quarkusPluginVersion}"
     }
 }
-rootProject.name='lotl-marketplace-service'
+rootProject.name='lotl-marketplace'
