--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,5 @@ greeting:
       port: 8000
   token:
     id: "617ad0ac07f435995daecf96"
-  kafka.bootstrap.servers: kafka:9092
+  kafka.bootstrap.servers: 103.56.156.179:9092
   mp.messaging.incoming.contract-events.connector: smallrye-kafka
