--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-cache'
     implementation 'io.quarkus:quarkus-arc'
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    implementation "org.springframework.security:spring-security-crypto:${springVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     testImplementation 'io.quarkus:quarkus-junit5'
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
