--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 #Gradle properties
 quarkusPluginId=io.quarkus
-quarkusPluginVersion=2.4.2.Final
+quarkusPluginVersion=2.5.1.Final
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=2.4.2.Final
+quarkusPlatformVersion=2.5.1.Final
 
 lombokVersion=1.18.22
 mapstructVersion=1.4.2.Final
+springVersion=5.6.0
