--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,13 @@ dependencies {
 //    implementation 'io.quarkus:quarkus-kubernetes'
     implementation 'io.quarkus:quarkus-grpc'
 //    implementation 'io.quarkus:quarkus-liquibase-mongodb'
-    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
+//    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
 //    implementation 'io.quarkus:quarkus-oidc'
 //    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
 //    implementation 'io.quarkus:quarkus-agroal'
     implementation 'io.quarkus:quarkus-cache'
     implementation 'io.quarkus:quarkus-arc'
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
-    implementation "org.springframework.security:spring-security-crypto:${springVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     testImplementation 'io.quarkus:quarkus-junit5'
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
